tests/NormalTests/paczka1/small_fuzzy/58605001.err
Error in line 6: rpo A256 4,4
Error in line 7: 4Q7X3a S777 67,5
Error in line 11: pTVQ S777 3,2
